--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,6 +1,6 @@
 //Import of font family
 
-@import url('https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 /*Scss styling for the full page*/
 
@@ -16,7 +16,7 @@ $margintitles: 50px 0px 50px 0px;
 $backgroundlight: rgb(255, 255, 255);
 $backgrounddarker: rgba(0, 0, 0, 0.43);
 $shadowtextheavy: 2px 2px 5px rgba(0, 0, 0, 0.7);
-$styleBasker: 'Baskervville SC';
+$styleBasker: "Oswald"; 
 
 // General styles for full page
 
@@ -117,10 +117,14 @@ h2 {
 
 //Portfolio styles
 
-.card-title {
-    font-weight: bold;
+.card-text {
+    text-shadow: none;
 }
 
+.card-title {
+    font-weight: bold;
+    text-shadow: none;
+}
 
 .projectstitle {
     margin: $margintitles;
@@ -203,7 +207,6 @@ h2 {
 .btnsubmitform {
     margin-top: 10px;
 }
-
 
 //Footer styles
 
